Bug 343282 - bfcache is slow. patch=mwu, r=enndeakin