toolkit/components/passwordmgr/base/nsPasswordManager.cpp
@@ -206,7 +206,6 @@ NS_INTERFACE_MAP_BEGIN(nsPasswordManager)
   NS_INTERFACE_MAP_ENTRY(nsIFormSubmitObserver)
   NS_INTERFACE_MAP_ENTRY(nsIWebProgressListener)
   NS_INTERFACE_MAP_ENTRY(nsIDOMFocusListener)
-  NS_INTERFACE_MAP_ENTRY(nsIDOMLoadListener)
   NS_INTERFACE_MAP_ENTRY_AMBIGUOUS(nsIDOMEventListener, nsIDOMFocusListener)
   NS_INTERFACE_MAP_ENTRY(nsISupportsWeakReference)
   NS_INTERFACE_MAP_ENTRY_AMBIGUOUS(nsISupports, nsIPasswordManager)
@@ -783,7 +782,8 @@ nsPasswordManager::OnStateChange(nsIWebProgress* aWebProgress,
                                  nsresult aStatus)
 {
   if (!(aStateFlags & nsIWebProgressListener::STATE_IS_DOCUMENT) ||
-      !(aStateFlags & nsIWebProgressListener::STATE_TRANSFERRING))
+      !(aStateFlags & nsIWebProgressListener::STATE_TRANSFERRING) ||
+      NS_FAILED(aStatus))
     return NS_OK;
 
   // Don't do anything if the global signon pref is disabled
@@ -794,14 +794,23 @@ nsPasswordManager::OnStateChange(nsIWebProgress* aWebProgress,
   nsresult rv = aWebProgress->GetDOMWindow(getter_AddRefs(domWin));
   NS_ENSURE_SUCCESS(rv, rv);
 
-  nsCOMPtr<nsIDOMEventTarget> targ = do_QueryInterface(domWin);
+  nsCOMPtr<nsIDOMDocument> domDoc;
+  domWin->GetDocument(getter_AddRefs(domDoc));
+  NS_ASSERTION(domDoc, "DOM window should always have a document!");
 
+  // For now, only prepare to prefill forms in HTML documents.
+  nsCOMPtr<nsIDOMHTMLDocument> htmlDoc = do_QueryInterface(domDoc);
+  if (!htmlDoc)
+    return NS_OK;
+
+  if (aStateFlags & nsIWebProgressListener::STATE_RESTORING)
+      return FillDocument(domDoc);
+
+  nsCOMPtr<nsIDOMEventTarget> targDoc = do_QueryInterface(domDoc);
+  nsCOMPtr<nsIDOMEventTarget> targWin = do_QueryInterface(domWin);
   nsIDOMEventListener* listener = NS_STATIC_CAST(nsIDOMFocusListener*, this);
-  if (aStateFlags & nsIWebProgressListener::STATE_TRANSFERRING && NS_SUCCEEDED(aStatus))
-    targ->AddEventListener(NS_LITERAL_STRING("DOMContentLoaded"), listener, PR_TRUE);
-
-  targ->AddEventListener(NS_LITERAL_STRING("unload"),
-                         NS_STATIC_CAST(nsIDOMLoadListener*, this), PR_FALSE);
+  targDoc->AddEventListener(NS_LITERAL_STRING("DOMContentLoaded"), listener, PR_FALSE);
+  targWin->AddEventListener(NS_LITERAL_STRING("pagehide"), listener, PR_FALSE);
 
   return NS_OK;
 }
@@ -1199,185 +1208,20 @@ nsPasswordManager::HandleEvent(nsIDOMEvent* aEvent)
   nsAutoString type;
   aEvent->GetType(type);
 
-  if (!type.EqualsLiteral("DOMContentLoaded"))
+  if (type.EqualsLiteral("DOMAutoComplete"))
     return FillPassword(aEvent);
 
   nsCOMPtr<nsIDOMEventTarget> target;
   aEvent->GetTarget(getter_AddRefs(target));
 
   nsCOMPtr<nsIDOMDocument> domDoc = do_QueryInterface(target);
-  // For now, only prefill forms in HTML documents.
-  nsCOMPtr<nsIDOMHTMLDocument> htmlDoc = do_QueryInterface(domDoc);
-  if (!htmlDoc)
+  if (!domDoc)
     return NS_OK;
 
-  nsCOMPtr<nsIDOMHTMLCollection> forms;
-  htmlDoc->GetForms(getter_AddRefs(forms));
-  
-  nsCOMPtr<nsIDocument> doc = do_QueryInterface(domDoc);
-
-  nsCAutoString realm;
-  if (!GetPasswordRealm(doc->GetDocumentURI(), realm))
-    return NS_OK;
-
-  SignonHashEntry* hashEnt;
-  if (!mSignonTable.Get(realm, &hashEnt))
-    return NS_OK;
-
-  PRUint32 formCount;
-  forms->GetLength(&formCount);
-
-  // We can auto-prefill the username and password if there is only
-  // one stored login that matches the username and password field names
-  // on the form in question.  Note that we only need to worry about a
-  // single login per form.
-
-  for (PRUint32 i = 0; i < formCount; ++i) {
-    nsCOMPtr<nsIDOMNode> formNode;
-    forms->Item(i, getter_AddRefs(formNode));
-
-    nsCOMPtr<nsIForm> form = do_QueryInterface(formNode);
-    SignonDataEntry* firstMatch = nsnull;
-    PRBool attachedToInput = PR_FALSE;
-    PRBool prefilledUser = PR_FALSE;
-    nsCOMPtr<nsIDOMHTMLInputElement> userField, passField;
-    nsCOMPtr<nsIDOMHTMLInputElement> temp;
-    nsAutoString fieldType;
-
-    for (SignonDataEntry* e = hashEnt->head; e; e = e->next) {
-      
-      nsCOMPtr<nsISupports> foundNode;
-      if (!(e->userField).IsEmpty()) {
-        form->ResolveName(e->userField, getter_AddRefs(foundNode));
-        temp = do_QueryInterface(foundNode);
-      }
-
-      nsAutoString oldUserValue;
-
-      if (temp) {
-        temp->GetType(fieldType);
-        if (!fieldType.Equals(NS_LITERAL_STRING("text")))
-          continue;
-
-        temp->GetValue(oldUserValue);
-        userField = temp;
-      }
-
-      if (!(e->passField).IsEmpty()) {
-        form->ResolveName(e->passField, getter_AddRefs(foundNode));
-        temp = do_QueryInterface(foundNode);
-      }
-      else if (userField) {
-        // No password field name was supplied, try to locate one in the form,
-        // but only if we have a username field.
-        nsCOMPtr<nsIFormControl> fc(do_QueryInterface(foundNode));
-        PRInt32 index = -1;
-        form->IndexOfControl(fc, &index);
-        if (index >= 0) {
-          PRUint32 count;
-          form->GetElementCount(&count);
-
-          PRUint32 i;
-          temp = nsnull;
-
-          // Search forwards
-          nsCOMPtr<nsIFormControl> passField;
-          for (i = index + 1; i < count; ++i) {
-            form->GetElementAt(i, getter_AddRefs(passField));
-
-            if (passField && passField->GetType() == NS_FORM_INPUT_PASSWORD) {
-              foundNode = passField;
-              temp = do_QueryInterface(foundNode);
-            }
-          }
-
-          if (!temp && index != 0) {
-            // Search backwards
-            i = index;
-            do {
-              form->GetElementAt(i, getter_AddRefs(passField));
-
-              if (passField && passField->GetType() == NS_FORM_INPUT_PASSWORD) {
-                foundNode = passField;
-                temp = do_QueryInterface(foundNode);
-              }
-            } while (i-- != 0);
-          }
-        }
-      }
-
-      nsAutoString oldPassValue;
-
-      if (temp) {
-        temp->GetType(fieldType);
-        if (!fieldType.Equals(NS_LITERAL_STRING("password")))
-          continue;
-
-        temp->GetValue(oldPassValue);
-        passField = temp;
-      } else {
-        continue;
-      }
-
-      if (!oldUserValue.IsEmpty()) {
-        // The page has prefilled a username.
-        // If it matches any of our saved usernames, prefill the password
-        // for that username.  If there are multiple saved usernames,
-        // we will also attach the autocomplete listener.
-
-        prefilledUser = PR_TRUE;
-        nsAutoString userValue;
-        if (NS_FAILED(DecryptData(e->userValue, userValue)))
-          return NS_OK;
-
-        if (userValue.Equals(oldUserValue)) {
-          nsAutoString passValue;
-          if (NS_FAILED(DecryptData(e->passValue, passValue)))
-            return NS_OK;
-
-          passField->SetValue(passValue);
-        }
-      }
-
-      if (firstMatch && userField && !attachedToInput) {
-        // We've found more than one possible signon for this form.
-
-        // Listen for blur and autocomplete events on the username field so
-        // that we can attempt to prefill the password after the user has
-        // entered the username.
-
-        AttachToInput(userField);
-        attachedToInput = PR_TRUE;
-      } else {
-        firstMatch = e;
-      }
-    }
-
-    // If we found more than one match, attachedToInput will be true,
-    // but if we found just one, we need to attach the autocomplete listener,
-    // and fill in the username and password  only if the HTML didn't prefill
-    // the username.
-    if (firstMatch && !attachedToInput) {
-      if (userField)
-        AttachToInput(userField);
-
-      if (!prefilledUser){
-        nsAutoString buffer;
-
-        if (userField) {
-          if (NS_FAILED(DecryptData(firstMatch->userValue, buffer)))
-            return NS_OK;
-
-          userField->SetValue(buffer);
-        }
-
-        if (NS_FAILED(DecryptData(firstMatch->passValue, buffer)))
-          return NS_OK;
-
-        passField->SetValue(buffer);
-      }
-    }
-  }
+  if (type.EqualsLiteral("pagehide"))
+    mAutoCompleteInputs.Enumerate(RemoveForDOMDocumentEnumerator, domDoc);
+  else if (type.EqualsLiteral("DOMContentLoaded"))
+    return FillDocument(domDoc);
 
   return NS_OK;
 }
@@ -1584,20 +1428,6 @@ nsPasswordManager::AutoCompleteSearch(const nsAString& aSearchString,
   return PR_TRUE;
 }
 
-// nsIDOMLoadListener implementation
-
-NS_IMETHODIMP
-nsPasswordManager::Load(nsIDOMEvent* aEvent)
-{
-  return NS_OK;
-}
-
-NS_IMETHODIMP
-nsPasswordManager::BeforeUnload(nsIDOMEvent* aEvent)
-{
-  return NS_OK;
-}
-
  /* static */ PLDHashOperator PR_CALLBACK
 nsPasswordManager::RemoveForDOMDocumentEnumerator(nsISupports* aKey,
                                                   PRInt32& aEntry,
@@ -1612,36 +1442,6 @@ nsPasswordManager::RemoveForDOMDocumentEnumerator(nsISupports* aKey,
 
   return PL_DHASH_NEXT;
 }
-
-NS_IMETHODIMP
-nsPasswordManager::Unload(nsIDOMEvent* aEvent)
-{
-  nsCOMPtr<nsIDOMEventTarget> target;
-  aEvent->GetTarget(getter_AddRefs(target));
-
-  nsCOMPtr<nsIDOMDocument> domDoc = do_QueryInterface(target);
-  if (domDoc)
-    mAutoCompleteInputs.Enumerate(RemoveForDOMDocumentEnumerator, domDoc);
-
-  nsIDOMEventListener* listener = NS_STATIC_CAST(nsIDOMFocusListener*, this);
-  if (target)
-    target->RemoveEventListener(NS_LITERAL_STRING("DOMContentLoaded"), listener, PR_TRUE);
-
-  return NS_OK;
-}
-
-NS_IMETHODIMP
-nsPasswordManager::Abort(nsIDOMEvent* aEvent)
-{
-  return NS_OK;
-}
-
-NS_IMETHODIMP
-nsPasswordManager::Error(nsIDOMEvent* aEvent)
-{
-  return NS_OK;
-}
-
 
 // internal methods
 
@@ -1936,6 +1736,181 @@ nsPasswordManager::FindPasswordEntryInternal(const SignonDataEntry* aEntry,
 
   *aResult = nsnull;
   return NS_ERROR_FAILURE;
+}
+
+nsresult
+nsPasswordManager::FillDocument(nsIDOMDocument* aDomDoc)
+{
+  nsCOMPtr<nsIDOMHTMLDocument> htmlDoc = do_QueryInterface(aDomDoc);
+  nsCOMPtr<nsIDOMHTMLCollection> forms;
+  htmlDoc->GetForms(getter_AddRefs(forms));
+  
+  nsCOMPtr<nsIDocument> doc = do_QueryInterface(aDomDoc);
+
+  nsCAutoString realm;
+  if (!GetPasswordRealm(doc->GetDocumentURI(), realm))
+    return NS_OK;
+
+  SignonHashEntry* hashEnt;
+  if (!mSignonTable.Get(realm, &hashEnt))
+    return NS_OK;
+
+  PRUint32 formCount;
+  forms->GetLength(&formCount);
+
+  // We can auto-prefill the username and password if there is only
+  // one stored login that matches the username and password field names
+  // on the form in question.  Note that we only need to worry about a
+  // single login per form.
+
+  for (PRUint32 i = 0; i < formCount; ++i) {
+    nsCOMPtr<nsIDOMNode> formNode;
+    forms->Item(i, getter_AddRefs(formNode));
+
+    nsCOMPtr<nsIForm> form = do_QueryInterface(formNode);
+    SignonDataEntry* firstMatch = nsnull;
+    PRBool attachedToInput = PR_FALSE;
+    PRBool prefilledUser = PR_FALSE;
+    nsCOMPtr<nsIDOMHTMLInputElement> userField, passField;
+    nsCOMPtr<nsIDOMHTMLInputElement> temp;
+    nsAutoString fieldType;
+
+    for (SignonDataEntry* e = hashEnt->head; e; e = e->next) {
+      
+      nsCOMPtr<nsISupports> foundNode;
+      if (!(e->userField).IsEmpty()) {
+        form->ResolveName(e->userField, getter_AddRefs(foundNode));
+        temp = do_QueryInterface(foundNode);
+      }
+
+      nsAutoString oldUserValue;
+
+      if (temp) {
+        temp->GetType(fieldType);
+        if (!fieldType.Equals(NS_LITERAL_STRING("text")))
+          continue;
+
+        temp->GetValue(oldUserValue);
+        userField = temp;
+      }
+
+      if (!(e->passField).IsEmpty()) {
+        form->ResolveName(e->passField, getter_AddRefs(foundNode));
+        temp = do_QueryInterface(foundNode);
+      }
+      else if (userField) {
+        // No password field name was supplied, try to locate one in the form,
+        // but only if we have a username field.
+        nsCOMPtr<nsIFormControl> fc(do_QueryInterface(foundNode));
+        PRInt32 index = -1;
+        form->IndexOfControl(fc, &index);
+        if (index >= 0) {
+          PRUint32 count;
+          form->GetElementCount(&count);
+
+          PRUint32 i;
+          temp = nsnull;
+
+          // Search forwards
+          nsCOMPtr<nsIFormControl> passField;
+          for (i = index + 1; i < count; ++i) {
+            form->GetElementAt(i, getter_AddRefs(passField));
+
+            if (passField && passField->GetType() == NS_FORM_INPUT_PASSWORD) {
+              foundNode = passField;
+              temp = do_QueryInterface(foundNode);
+            }
+          }
+
+          if (!temp && index != 0) {
+            // Search backwards
+            i = index;
+            do {
+              form->GetElementAt(i, getter_AddRefs(passField));
+
+              if (passField && passField->GetType() == NS_FORM_INPUT_PASSWORD) {
+                foundNode = passField;
+                temp = do_QueryInterface(foundNode);
+              }
+            } while (i-- != 0);
+          }
+        }
+      }
+
+      nsAutoString oldPassValue;
+
+      if (temp) {
+        temp->GetType(fieldType);
+        if (!fieldType.Equals(NS_LITERAL_STRING("password")))
+          continue;
+
+        temp->GetValue(oldPassValue);
+        passField = temp;
+      } else {
+        continue;
+      }
+
+      if (!oldUserValue.IsEmpty()) {
+        // The page has prefilled a username.
+        // If it matches any of our saved usernames, prefill the password
+        // for that username.  If there are multiple saved usernames,
+        // we will also attach the autocomplete listener.
+
+        prefilledUser = PR_TRUE;
+        nsAutoString userValue;
+        if (NS_FAILED(DecryptData(e->userValue, userValue)))
+          return NS_OK;
+
+        if (userValue.Equals(oldUserValue)) {
+          nsAutoString passValue;
+          if (NS_FAILED(DecryptData(e->passValue, passValue)))
+            return NS_OK;
+
+          passField->SetValue(passValue);
+        }
+      }
+
+      if (firstMatch && userField && !attachedToInput) {
+        // We've found more than one possible signon for this form.
+
+        // Listen for blur and autocomplete events on the username field so
+        // that we can attempt to prefill the password after the user has
+        // entered the username.
+
+        AttachToInput(userField);
+        attachedToInput = PR_TRUE;
+      } else {
+        firstMatch = e;
+      }
+    }
+
+    // If we found more than one match, attachedToInput will be true,
+    // but if we found just one, we need to attach the autocomplete listener,
+    // and fill in the username and password  only if the HTML didn't prefill
+    // the username.
+    if (firstMatch && !attachedToInput) {
+      if (userField)
+        AttachToInput(userField);
+
+      if (!prefilledUser){
+        nsAutoString buffer;
+
+        if (userField) {
+          if (NS_FAILED(DecryptData(firstMatch->userValue, buffer)))
+            return NS_OK;
+
+          userField->SetValue(buffer);
+        }
+
+        if (NS_FAILED(DecryptData(firstMatch->passValue, buffer)))
+          return NS_OK;
+
+        passField->SetValue(buffer);
+      }
+    }
+  }
+
+  return NS_OK;
 }
 
 nsresult
